--- a/app/javascript/app/pages/ghg-emissions/ghg-emissions-styles.scss
+++ b/app/javascript/app/pages/ghg-emissions/ghg-emissions-styles.scss
@@ -1,5 +1,1 @@
 @import '~styles/layout.scss';
-
-.wrapper {
-  border-bottom: 1px solid rgba($dark-gray, 0.3);
-}
