--- a/app/javascript/app/pages/ndc-country/ndc-country-styles.scss
+++ b/app/javascript/app/pages/ndc-country/ndc-country-styles.scss
@@ -33,5 +33,5 @@
 }
 
 .accordion {
-  margin-bottom: 40px;
+  margin-bottom: -1px;
 }
