--- a/app/javascript/app/pages/ndc-sdg/ndc-sdg-styles.scss
+++ b/app/javascript/app/pages/ndc-sdg/ndc-sdg-styles.scss
@@ -11,7 +11,3 @@
 .bg {
   background-color: $light-gray;
 }
-
-.wrapper {
-  margin-bottom: 40px;
-}
